--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@studio-freight/lenis": "^1.0.42",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "swiper": "^11.1.12"
   },
   "devDependencies": {
