--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^11.5.4",
     "gsap": "^3.12.5",
+    "lenis": "^1.1.16",
     "lodash.throttle": "^4.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
