--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash.throttle": "^4.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.26.2",
     "swiper": "^11.1.12"
   },
