testando o usdo do prismac e testando busca de dados

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_SITE_KEY=6LcLk58qAAAAAIKAd-K9Q_aezev5CU1jJEyQrcQI
+VITE_PRISMIC_ENVIRONMENT=revelatio
+VITE_PRISMIC_CASES=MC5aNVBUT3hJQUFDNEFNN04w.emVP77-977-977-9ce-_vTjvv70II0bvv71gIO-_ve-_vSRV77-977-977-977-977-9UQDvv73vv73vv73vv73vv70
