--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emailjs/browser": "^4.4.1",
     "@gsap/react": "^2.1.1",
     "@nextui-org/react": "^2.4.8",
+    "@prismicio/client": "^7.15.1",
+    "@prismicio/react": "^2.9.1",
     "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^11.5.4",
     "gsap": "^3.12.5",
