--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.26.2",
+    "split-type": "^0.3.4",
     "swiper": "^11.1.12"
   },
   "devDependencies": {
